fixing css issues on small devices

--- a/less/agency.less
+++ b/less/agency.less
@@ -187,8 +187,8 @@ header {
         .intro-heading {
             .heading-font;
             font-weight: 700;
-            font-size: 50px;
-            line-height: 50px;
+            font-size: 35px;
+            line-height: 35px;
             margin-bottom: 25px;
         }
     }
@@ -209,8 +209,8 @@ header {
             .intro-heading {
                 .heading-font;
                 font-weight: 700;
-                font-size: 75px;
-                line-height: 75px;
+                font-size: 55px;
+                line-height: 55px;
                 margin-bottom: 50px;
             }
         }
