--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -204,8 +204,8 @@ header {
     .intro-heading {
       @include heading-font;
       font-weight: 700;
-      font-size: 50px;
-      line-height: 50px;
+      font-size: 35px;
+      line-height: 35px;
       margin-bottom: 25px;
     }
   }
@@ -228,8 +228,8 @@ header {
       .intro-heading {
         @include heading-font;
         font-weight: 700;
-        font-size: 75px;
-        line-height: 75px;
+        font-size: 55px;
+        line-height: 55px;
         margin-bottom: 50px;
       }
     }
